--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.314.0",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.5.0",
     "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
     "react-syntax-highlighter": "^15.5.0",
-    "lucide-react": "^0.314.0",
-    "clsx": "^2.1.0",
-    "nanoid": "^5.0.4"
+    "remark-gfm": "^4.0.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
