feat: upgrade to v1.0.2 with file parsing and UI improvements
- Add file parsing support for PDF, Word, Images
- Add new dependencies: PyPDF2, python-docx, Pillow, python-magic
- Update offline package script with new dependencies
- Fix sidebar UI and remove collapse functionality as requested
- General UI improvements and bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ dist/
 build/
 *.egg-info/
 yuichatbox/static/
-yui-chatbox-offline-*/
 
 # IDE
 .vscode/
@@ -74,3 +73,7 @@ Thumbs.db
 # Runtime files
 *.pid
 nohup.out
+
+# Offline packages
+yui-chatbox-offline-*.tar.gz
+yui-chatbox-offline-*/
