--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,7 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 HOST=0.0.0.0
 PORT=8001
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+
+# File Upload Configuration
+UPLOAD_DIR=./uploads
+MAX_FILE_SIZE=10485760  # 10MB in bytes
