--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,10 @@ openai==1.10.0
 python-dotenv==1.0.0
 pydantic==2.5.3
 httpx==0.26.0
+PyPDF2==3.0.1
+python-docx==1.1.0
+Pillow==10.2.0
+python-magic==0.4.27
+aiofiles==23.2.1
+nanoid==2.0.0
+python-multipart==0.0.9
